--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title >
+    <title>User Experience Designer Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
-     padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em;
-     margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
-    <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0;
-           left: 0; border: none; padding: 0; margin: 0;"
-           src="https://www.canva.com/design/DAF3fPlY6eg/view?embed"
-           allowfullscreen="allowfullscreen" allow="fullscreen">
-    </iframe>
-</div>
+    <div class="iframe-container">
+        <iframe class="responsive-iframe"
+                src="https://www.canva.com/design/DAF3fPlY6eg/view?embed"
+                allowfullscreen="allowfullscreen"
+                allow="fullscreen"
+                loading="lazy">
+        </iframe>
+    </div>
+    <a href="https://www.canva.com/design/DAF3fPlY6eg/view?utm_content=DAF3fPlY6eg&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
+       target="_blank"
+       rel="noopener noreferrer">User Experience Designer Page</a> by Dynast Business
+</body>
+</html>
 
 <a href="https://www.canva.com/design/DAF3fPlY6eg/view?utm_content=DAF3fPlY6eg&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
    target="_blank" rel="noopener">
