--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
     </div>
     <a href="https://www.canva.com/design/DAF3fPlY6eg/view?utm_content=DAF3fPlY6eg&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
        target="_blank"
-       rel="noopener noreferrer">User Experience Designer Page</a> by Dynast Business
+       rel="noopener noreferrer">User Experience Designer Page</a> by Briana Wilder
 </body>
-</html>
 
-<a href="https://www.canva.com/design/DAF3fPlY6eg/view?utm_content=DAF3fPlY6eg&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
-   target="_blank" rel="noopener">
-    Software Engineer Resume Website in Black and White Modern Style by Dynast Business
-</a>
-</body>
+<script src="index.js"></script>
 </html>
