--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Experience Designer Page</title>
+    <title>Briana Wilder: UX Designer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,11 +14,7 @@
                 allow="fullscreen"
                 loading="lazy">
         </iframe>
-    </div>
-    <a href="https://www.canva.com/design/DAF3fPlY6eg/view?utm_content=DAF3fPlY6eg&utm_campaign=designshare&utm_medium=embeds&utm_source=link"
-       target="_blank"
-       rel="noopener noreferrer">User Experience Designer Page</a> by Briana Wilder
-</body>
+  </body>
 
 <script src="index.js"></script>
 </html>
