--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 allow="fullscreen"
                 loading="lazy">
         </iframe>
-  </body>
+    </div>
 
-<script src="index.js"></script>
+    <script src="index.js"></script>
+</body>
 </html>
