--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Briana Wilder: UX Designer</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Briana Wilder: UX Designer</title>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="iframe-container">
-        <iframe class="responsive-iframe"
-                src="https://www.canva.com/design/DAF3fPlY6eg/view?embed"
-                allowfullscreen="allowfullscreen"
-                allow="fullscreen"
-                loading="lazy">
-        </iframe>
-    </div>
+<div class="form-container">
+<h1>Let's Connect</h1>
+     <form id="contactForm">
+ <label for="firstName">First Name:</label>
+<input type="text" id="firstName" name="firstName" required><br><br>
 
-    <script src="index.js"></script>
+<label for="email">Email:</label>
+<input type="email" id="email" name="email" required><br><br>
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+
+    <div class="iframe-container">
+        <iframe class="responsive-iframe"
+                src="https://www.canva.com/design/DAF3fPlY6eg/view?embed"
+                allowfullscreen="allowfullscreen"
+                allow="fullscreen"
+                loading="lazy">
+        </iframe>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
